feat: criação de controllers, services, repositories e entities

--- a/biblioteca-incrementada/pom.xml
+++ b/biblioteca-incrementada/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>br.org.serratec</groupId>
+			<artifactId>biblioteca</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
