--- a/biblioteca-incrementada/src/main/resources/application.properties
+++ b/biblioteca-incrementada/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.jpa.hibernate.show-sql 				= true
 
 spring.datasource.url 						= jdbc:postgresql://localhost:5432/bibliotecaincrementada
 spring.datasource.username					= postgres
-spring.datasource.password					= Admin
+spring.datasource.password					= 1234
 spring.datasource.driver-class-name 		= org.postgresql.Driver
 logging.level.org.hibernate.SQL				= INFO
